@@ -1,46 +1,0 @@
-LANGUAGE
-  lock (var) { block }  (http://tinyurl.com/5rpzg)
-  builtin functions
-  varargs/overloaded functions (?)
-  syntax for dereferencing C structures (http://tinyurl.com/4tpgh); 
-     but what about iterative pointer following (linked list traversal?)
-  syntax for embedded C (?); or at least C interface mechanism
-  decide on numeric type size; probably need 64-bit
-  need error builtin function to bump errorcount and abort session
-
-TRANSLATOR
-  lots of "XXX" markers
-  deal with (warn/elide?) local variables only written or read
-
-RUNTIME
-  lifecycle control (http://tinyurl.com/6ub2a)
-  better map/string memory management
-  extending map key arity beyond 2
-  user-level alternative implementation
-  dtrace-flavoured utility functions
-  interface with LTT, LKST, KGEM, perfmon, timer event sources
-
-OPROFILE/timers
-  kprobes-like event setting and callback API
-
-PROVIDERS
-  lkst("process_contextswitch")
-  kernel.function("wait_for_godot").callees
-  kernel.function("batman").calledfrom("commissioner")
-  kernel.module("cpqarray.ko").jumptable("ida_fops")
-  kernel.watch("datasymbol").write
-  user("fche").inode("/bin/vi").function("refresh")
-  user.inode("/lib/libc.so.6").function("malloc").return
-  time.real.hz(500)
-  time.virtual.jiffies(100)
-  perfcounter("tlbmiss").count(4000)
-
-KPROBES
-  user-level probe points (via ptrace mechanism?)
-  treatment of nested probe hits (prefer no permanent disablement; require
-     flagging of occurrence)
-  self-monitoring of performance overhead
-
-SAMPLES
-  all-inclusive top-style interactive program that subsumes
-     top, lsof, netstat, ...
