@@ -1,3 +1,10 @@
+2005-09-10  Frank Ch. Eigler  <fche@elastic.org>
+
+	* Makefile.am, runtest.sh: Use a "testresuilt/" directory in build
+	tree rather than overloading "testsuite/".
+	* TODO: Removed obsoleted file.
+	* Makefile.in: Regenerated.
+
 2005-09-07  Martin Hunt  <hunt@redhat.com>
 
 	* stap.1.in: Document current "-c" and "-x" options.
